[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]

[dependencies]
bitcoincore-rpc = { path = "../client" }
bitcoin = { path = "/home/tobin/build/github.com/tcharding/rust-bitcoin", features = ["serde", "rand"] }
lazy_static = "1.4.0"
log = "0.4"
